loopfor.LoopCourseForest.scala.error
Compilation error:
LoopCourseForest:2: error: ')' expected but '=' found.
  forward(steps:Int=4)
                   ^