loopfor.LoopCourseForest.scala.code
for(stepper<-1 to 7){
  forward(steps:Int=4)
  left()
  forward()
  right()
  forward(steps:Int=4)
  right()
  forward()
  left()
  forward(steps:Int=4)
}